# notebooks

./: README.md
gam-adjustment/: _quarto.yml  gam-adjustment.html  gam-adjustment.qmd  index.html  search.json
owid-asr/: _quarto.yml  owid-asr.html
pgs-epistasis/: .gitignore  _quarto.yml  index.html  model_functions.py  pgs-writeup.qmd  pyproject.toml
quarto-python-prompts/: _quarto.yml  index.html  quarto-prompts.html  quarto-prompts.qmd  search.json
r-data-analysis-intro/: _quarto.yml  basic-data-analysis.R  basic-data-analysis.html  basic-data-analysis.qmd  index.html  search.json
transformation-covariance/: _quarto.yml  index.html  transformation-covariance.html  transformation-covariance.qmd
