[tool.poetry]
name = "pgs-epistasis-sims"
description = ""
authors = ["Jordan Taylor <jtaylor81284@hotmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
numpy = "^1.26.1"
pandas = "^2.1.2"
ipykernel = "^6.26.0"
scikit-learn = "^1.3.2"
nbformat = "^5.9.2"
nbclient = "^0.8.0"
xgboost = "^2.0.1"
statsmodels = "^0.14.0"
scipy = "^1.11.3"
matplotlib = "^3.8.1"
tabulate = "^0.9.0"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
